--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "crushing-app-frontend",
   "version": "1.0.0",
   "description": "CrushingApp - React.js Frontend",
+  "engines": {
+    "node": "12.18.0",
+    "yarn": "1.22.4"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.2.1",
