--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux-thunk": "^2.3.0",
     "reactstrap": "^8.0.0",
     "react-grid-layout": "^0.18.3",
-    "react-redux-multilingual": "^2.0.4"
+    "react-redux-multilingual": "^2.0.4",
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
