--- a/package.json
+++ b/package.json
@@ -49,14 +49,16 @@
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    // "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "prettier-check": "prettier --check 'src/**/*.{js,jsx,css}'",
     "prettier-run": "prettier --write 'src/**/*.{js,jsx,css}'",
-    "check-code": "yarn run prettier-run && yarn run lint"
+    "check-code": "yarn run prettier-run && yarn run lint",
+    "dev": "react-scripts start",
+    "start": "serve -s build"
   },
   "browserslist": [
     ">0.2%",
