--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint .",
@@ -57,7 +56,9 @@
     "prettier-run": "prettier --write 'src/**/*.{js,jsx,css}'",
     "check-code": "yarn run prettier-run && yarn run lint",
     "dev": "react-scripts start",
-    "start": "serve -s build"
+    "start": "node index.js",
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod" 
   },
   "browserslist": [
     ">0.2%",
