--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-scripts": "^3.4.1"
   },
   "scripts": {
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -56,8 +57,7 @@
     "prettier-check": "prettier --check 'src/**/*.{js,jsx,css}'",
     "prettier-run": "prettier --write 'src/**/*.{js,jsx,css}'",
     "check-code": "yarn run prettier-run && yarn run lint",
-    "dev": "react-scripts start",
-    "start": "serve -s build"
+    "dev": "react-scripts start"   
   },
   "browserslist": [
     ">0.2%",
