--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CrushingApp - React.js Frontend",
   "engines": {
     "node": "12.18.0",
-    "yarn": "1.22.4"
+    "npm": "6.14.4"
   },
   "private": true,
   "dependencies": {
@@ -49,11 +49,12 @@
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ." 
+    "heroku-postbuild": "npm run build"
   },
   "browserslist": [
     ">0.2%",
