--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-grid-layout": "^0.18.3",
     "react-redux-multilingual": "^2.0.4",
     "react-scripts": "^3.4.1",
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
