--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CrushingApp - React.js Frontend",
   "engines": {
     "node": "12.18.0",
-    "npm": "6.14.4"
+    "yarn": "1.22.4"
   },
   "private": true,
   "dependencies": {
