--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@material-ui/styles": "^4.2.1",
     "@rjsf/core": "^2.0.1",
     "@rjsf/material-ui": "^2.0.1",
+    "chart.js": "^2.9.3",
     "clsx": "^1.0.4",
     "connected-react-router": "^6.4.0",
+    "eslint": "^6.6.0",
     "history": "^4.10.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
@@ -26,23 +28,23 @@
     "popper.js": "^1.14.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.9.0",
+    "react-grid-layout": "^0.18.3",
     "react-moment": "^0.9.7",
     "react-notification-system": "^0.2.17",
     "react-notification-system-redux": "^2.0.0",
     "react-redux": "^7.1.1",
     "react-redux-loading-bar": "^4.3.0",
+    "react-redux-multilingual": "^2.0.4",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.4.1",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "reactstrap": "^8.0.0",
-    "react-grid-layout": "^0.18.3",
-    "react-redux-multilingual": "^2.0.4",
-    "react-scripts": "^3.4.1",
-    "eslint": "^6.6.0",
     "serve": "^11.3.2"
   },
   "devDependencies": {
