--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.14.3",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-canvas-draw": "^1.1.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.9.0",
     "react-grid-layout": "^0.18.3",
