--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "chartjs-plugin-annotation": "^0.5.7"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
