--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "CrushingApp - React.js Frontend",
   "engines": {
-    "node": "12.18.0",
-    "yarn": "1.22.4"
+    "node": ">=12.18.0",
+    "yarn": ">=1.22.4"
   },
   "private": true,
   "dependencies": {
