--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,25 +17,25 @@
         "console": "integratedTerminal",
         "internalConsoleOptions": "neverOpen",
         "env": {
-          "HTTPS": "false",
-          "PORT": "5000",
-          "REACT_APP_REST_API_PROTOCOL": "http",
-          "REACT_APP_REST_API_HOSTNAME": "localhost",
-          "REACT_APP_REST_API_PORT": "3001",
-          "REACT_APP_REST_API_BASE_PATH": "localhost",
-          "REACT_APP_BACKEND_PATH": "/v1",
-          "REACT_APP_REST_API_AUTH_HOSTNAME": "localhost",
-          "REACT_APP_REST_API_AUTH_PORT": "3001"
-
           // "HTTPS": "false",
           // "PORT": "5000",
-          // "REACT_APP_REST_API_PROTOCOL": "https",
-          // "REACT_APP_REST_API_HOSTNAME": "backend-clubkopa.herokuapp.com",
-          // "REACT_APP_REST_API_PORT": "",
-          // "REACT_APP_REST_API_BASE_PATH": "backend-clubkopa.herokuapp.com",
+          // "REACT_APP_REST_API_PROTOCOL": "http",
+          // "REACT_APP_REST_API_HOSTNAME": "localhost",
+          // "REACT_APP_REST_API_PORT": "3000",
+          // "REACT_APP_REST_API_BASE_PATH": "localhost",
           // "REACT_APP_BACKEND_PATH": "/v1",
-          // "REACT_APP_REST_API_AUTH_HOSTNAME": "backend-clubkopa.herokuapp.com",
-          // "REACT_APP_REST_API_AUTH_PORT": ""
+          // "REACT_APP_REST_API_AUTH_HOSTNAME": "localhost",
+          // "REACT_APP_REST_API_AUTH_PORT": "3001"
+
+          "HTTPS": "false",
+          "PORT": "5000",
+          "REACT_APP_REST_API_PROTOCOL": "https",
+          "REACT_APP_REST_API_HOSTNAME": "backend-clubkopa.herokuapp.com",
+          "REACT_APP_REST_API_PORT": "",
+          "REACT_APP_REST_API_BASE_PATH": "backend-clubkopa.herokuapp.com",
+          "REACT_APP_BACKEND_PATH": "/v1",
+          "REACT_APP_REST_API_AUTH_HOSTNAME": "backend-clubkopa.herokuapp.com",
+          "REACT_APP_REST_API_AUTH_PORT": ""
         }
       }
     ]
